--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,17 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --allow-net --env-file --allow-env --allow-read --watch main.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "deploy": {
+    "project": "6c9478ac-f00a-47e8-85e8-4c918869e678",
+    "exclude": [
+      "**/node_modules"
+    ],
+    "include": [],
+    "entrypoint": "main.ts"
   }
 }
